[package]
name = "proxy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.140"
serde_derive = "*"
serde_json = "1.0.89"
tokio = { version = "1", features = ["full"] }
futures = "0.3.24"
log = "0.4.17"
fern = "0.6"
chrono = "0.4.23"
histogram = "0.6.9"
